[gd_scene load_steps=4 format=3 uid="uid://6e5xm63n7nuy"]

[ext_resource type="Script" path="res://code/ball.gd" id="1_00rfa"]
[ext_resource type="Texture2D" uid="uid://b1kwq5bpvbv5d" path="res://svg/dibuix.svg" id="2_bfnok"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p0ekj"]
radius = 32.0

[node name="ball" type="Area2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_00rfa")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_bfnok")

[node name="Area2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p0ekj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
